data/derived/sp14/progs/unify/prog0918.ml.out
Characters 66-69:
  | Thresh (w,t,u,z) -> if eval(w) < eval(t) then eval(u) else eval(z)
                               ^^^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'b
